[package]
name = "substreams-ens"
version = "0.1.0"
description = "Substreams for Ethereum Name Services"
edition = "2021"
repository = "https://github.com/emiliocramer/substreams-ens"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "^0.11.0"
# Use latest from https://crates.io/crates/substreams
substreams = "0.3.0"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.6.0"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.6.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"